# ComfyUI-FRED-Nodes_v2

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
example_workflows/: FRED_workflow_1.json
nodes/: FRED_AutoCropImage_Native_Ratio.py  FRED_AutoImageTile_from_Mask.py  FRED_AutoLoraLoader_5_stacks_simple.py  FRED_AutoLoraLoader_Dynamic.py  FRED_CropFace.py  FRED_ExecutionTime.py  FRED_ExtractKSampler_parameter.py  FRED_ExtractLora_parameter.py  FRED_ImageLoad.py  FRED_ImageQualityInspector.py  FRED_ImageSaver.py  FRED_ImageSaver_v2.py  FRED_ImageUncropFromBBox.py  FRED_Image_Sharpening_Blur_Level.py  FRED_JpegArtifact_Simulator.py  FRED_ModelLoaderWithName.py  FRED_Save_Text_File.py  FRED_Simplified_Parameters_Panel.py  FRED_Text_to_XMP.py  FRED_WildcardConcat_Dynamic.py
web/: fred_autofill_source_filename_hint.js  fred_color_widget.js  fred_dynamicLoras.js  fred_wildcard_concat.js
wildcards/: Ages.txt  Backgrounds.txt  Dress.txt  Eye_colors.txt  Female_actress.txt  Hair_Colors.txt  Hair_Cuts.txt  Lighting.txt  Mini_skirt.txt  Nationnality.txt  Sexual_positions.txt  Sexy_bottom.txt  Sexy_female_costume.txt  Sexy_pose.txt  Sexy_top.txt  Skin.txt  Sprite.txt  Super_Cars.txt  Yoda.txt  Young_female_actress.txt  body_attributes.txt  characters.txt  person.txt
