[project]
name = "ComfyUI FRED Nodes v2"
description = "Multiple nodes to be used for more complex workflow."
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Frédéric Bisson" }]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/Poukpalaova/ComfyUI-FRED-Nodes_v2"

[tool.comfy]
PublisherId = "Poukpalaova"
DisplayName = "ComfyUI FRED Nodes v2"
Icon = "https://raw.githubusercontent.com/Poukpalaova/ComfyUI-FRED-Nodes_v2/main/icon.png"
Banner = "https://raw.githubusercontent.com/Poukpalaova/ComfyUI-FRED-Nodes_v2/main/banner.png"
requires-comfyui = ">=1.0.0"
